Set time-based adjustment in redshift.conf

--- a/.config/redshift.conf
+++ b/.config/redshift.conf
@@ -2,7 +2,11 @@
 [redshift]
 ; Set the day and night screen temperatures
 temp-day=6500
-temp-night=3200
+temp-night=4500
+
+; Set time-based adjustment
+dawn-time=05:00-06:00
+dusk-time=22:00
 
 ; Enable/Disable a smooth transition between day and night
 ; 0 will cause a direct change from day to night screen temperature.
